--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/cli": "^4.0.7",
     "@tailwindcss/vite": "^4.0.7",
     "@types/react-router-dom": "^5.3.3",
+    "eslint-plugin-react": "^7.37.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.2.0",
