--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint": "eslint .",
+    "lint:fix": "eslint --fix",
     "preview": "vite preview"
   },
   "dependencies": {
